[package]
name = "heimdall_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
log = "0.4"
env_logger = "0.9"
time = "0.3.36"
actix-cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
actix-governor = "0.5.0"
tokio-postgres = "0.7"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"